fixed styling of search stretched results

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -250,3 +250,7 @@ fieldset:disabled {
 /*input.checkbox {*/
 /*  display: inline-block;*/
 /*}*/
+
+.row .col.m4 {
+  width: 100%;
+}
